syntax = "proto3";

package grpcwebchat;
option java_package = "com.angelomelonas.grpcwebchat";

service ChatService {
    /**
     * The client subscribes to all messages sent by other clients. Clients can only subscribe if they have been authenticated.
     * This stream is long-lived and only closed once the client unsubscribes or disconnects.
     *
     * Request              SubscriptionRequest containing the client's Identity.
     * Response (stream)    A long-lived stream of Messages.
     */
    rpc Subscribe (SubscriptionRequest) returns (stream Message);

    /**
     * The client unsubscribes from receiving messages.
     *
     * Request      SubscriptionRequest containing the client's username.
     * Response     A Message informing the client it's been unsubscribed.
     */
    rpc Unsubscribe (SubscriptionRequest) returns (Message);

    /**
     * The client sends a message to all other subscribed clients.
     *
     * Request      MessageRequest containing the client's Message.
     * Response     A Message informing the client it's been unsubscribed.
     */
    rpc SendMessage (MessageRequest) returns (Message);
}

message SubscriptionRequest {
    Identity identity = 1;
}

message MessageRequest {
    string Message = 1;
}

message Identity {
    string username = 1;
}

message Message {
    Identity identity = 1;
    string message = 2;
    int64 timestamp = 3;
}
